# life-pilot-agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README.ru.md  bootstrap.sh  pyproject.toml
deploy/: d-brain-bot.service  d-brain-process.service  d-brain-weekly.service  life-pilot-bot.service  life-pilot-process.service  life-pilot-process.timer  life-pilot-weekly.service  life-pilot-weekly.timer
docs/plans/: 2026-04-27-life-pilot-input-fabric-design.md
scripts/: fix-service.sh  google_reauth.py  process-v2.sh  process.sh  send_daily_plan.py  send_evening_summary.py  send_monthly_check.py  send_weekly_report.py  start-bot.sh  v2-compare.sh  v2-test-report.sh  weekly.py
src/d_brain/: __main__.py  config.py
src/d_brain/bot/: keyboards.py  main.py  states.py  undo.py
src/d_brain/services/: calendar_integration.py  git.py  grow.py  processor.py
src/life_pilot/: __init__.py  __main__.py  config.py  llm_bootstrap.py
src/life_pilot/bot/: formatters.py  keyboards.py  main.py  progress.py  states.py  undo.py  utils.py
src/life_pilot/services/: calendar_integration.py  claude_runner.py  dpv_routine.py  factory.py  git.py  grow.py  processor.py  storage.py  tasknotes.py  todoist.py  transcription.py  vault_search.py
tests/: conftest.py  test_claude_runner.py  test_config.py  test_dpv_routine.py  test_formatters.py  test_git_explicit_paths.py  test_processor_parse.py  test_tasknotes_service.py  test_undo.py  test_vault_storage.py
vault/.claude/: CLAUDE.md
vault/daily/: 2026-04-19.md
vault/templates/: daily-template.md
(+60 files in other folders)
