[project]
name = "life-pilot-agent"
version = "2.1.0"
description = "AI life assistant — captures thoughts, manages tasks, coaches you, and holds free-form conversations via Telegram"
readme = "README.md"
authors = [
    { name = "Victor Danci", email = "mixshima@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.0",
    "apscheduler>=3.10",
    "httpx",
    "pydantic>=2.0",
    "pydantic-settings",
    "pytz",
    "requests",
    "todoist-api-python>=3.1.0",
    "google-auth>=2.0",
    "google-api-python-client>=2.0",
]

[project.optional-dependencies]
legacy = [
    "deepgram-sdk",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "life_pilot"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "types-pytz>=2025.2.0.20251108",
    "types-requests>=2.32.4.20260107",
]
